crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__checkpoints__after_below_window_asc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: output
---
#0 item cp=2 | wm.cursor=item(cp=2) wm.cp=2 | end=-
#1 item cp=3 | wm.cursor=item(cp=3) wm.cp=3 | end=-
#2 no-item | wm.cursor=boundary(cp=4) wm.cp=3 | end=QUERY_END_REASON_CHECKPOINT_BOUND
