crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__checkpoints__after_item_last_asc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: output
---
#0 no-item | wm.cursor=boundary(cp=5) wm.cp=- | end=QUERY_END_REASON_CURSOR_BOUND
