crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__checkpoints__before_at_window_start_desc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: output
---
#0 no-item | wm.cursor=boundary(cp=1) wm.cp=- | end=QUERY_END_REASON_CURSOR_BOUND
