crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__checkpoints__before_boundary_mid_desc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: output
---
#0 item cp=1 | wm.cursor=item(cp=1) wm.cp=1 | end=-
#1 item cp=0 | wm.cursor=item(cp=0) wm.cp=0 | end=-
#2 no-item | wm.cursor=boundary(cp=0) wm.cp=0 | end=QUERY_END_REASON_CHECKPOINT_BOUND
